--- a/port.html
+++ b/port.html
@@ -6,12 +6,17 @@
 		<style type="text/css">
 			@font-face {
 				font-family: "shumatsu";
-				src: url('少女終末旅行.otf');
+				src: url('dl_font/少女終末旅行.otf');
 			}
 
 			@font-face {
 				font-family: "shokaki";
-				src: url("しょかきさらり行体.ttf");
+				src: url("dl_font/しょかきさらり行体.ttf");
+			}
+
+			@font-face {
+				font-family: "voynich";
+				src: url('dl_font/Voynich.ttf');
 			}
 
 			body {
@@ -147,6 +152,15 @@
 				}
 			}
 		</style>
+
+		<script type="text/javascript">
+			/*document.addEventListener('DOMContentLoaded', () => {
+				const icons = document.getElementsByClassName('icons').children();
+				for(let i=0; i<icons.length; i++) {
+					icons[i].style.height = icons[i].clientWodth + "px";
+				}
+			})*?
+		</script>
 	</head>
 	<body>
 		<div id="contnet">
@@ -178,15 +192,15 @@
 				<div id="skills">
 					<span class="subTitle">Skills</span>
 					<div class="icons">
-						<div style="background-image: url('html-1.svg');"><p>HTML5</p></div>
-						<div style="background-image: url('css.svg');"><p>CSS3</p></div>
-						<div style="background-image: url('js.svg');"><p>JavaScript</p></div>
-						<div style="background-image: url('node.svg');"><p>node.js</p></div>
-						<div style="background-image: url('php.svg');"><p>php</p></div>
-						<div style="background-image: url('java.svg'); background-size: 65%;"><p>java</p></div>
-						<div style="background-image: url('haskell.svg');"><p>haskell</p></div>
-						<div style="background-image: url('mysql.svg');"><p>MySQL</p></div>
-						<div style="background-image: url('python.svg');"><p>python</p></div>
+						<div style="background-image: url('img/html-1.svg');"><p>HTML5</p></div>
+						<div style="background-image: url('img/css.svg');"><p>CSS3</p></div>
+						<div style="background-image: url('img/js.svg');"><p>JavaScript</p></div>
+						<div style="background-image: url('img/node.svg');"><p>node.js</p></div>
+						<div style="background-image: url('img/php.svg');"><p>php</p></div>
+						<div style="background-image: url('img/java.svg'); background-size: 65%;"><p>java</p></div>
+						<div style="background-image: url('img/haskell.svg');"><p>haskell</p></div>
+						<div style="background-image: url('img/mysql.svg');"><p>MySQL</p></div>
+						<div style="background-image: url('img/python.svg');"><p>python</p></div>
 					</div>
 				</div>				
 				<div id="products">
