--- a/port.html
+++ b/port.html
@@ -143,6 +143,7 @@
 							position: relative;
 							bottom: calc(-1 * 100%);
 							color: rgba(255,255,255,0.7);
+							overflow: hidden;
 							
 							display: grid;
 							place-items: center;	
