--- a/port.html
+++ b/port.html
@@ -117,7 +117,7 @@
 
 				.icons  {
 					display: grid;
-					grid-template-columns: repeat(4, auto);
+					grid-template-columns: repeat(4, 1fr);
 					grid-gap: 50px;
 					/*grid-row-gap: 30px;*/
 
