--- a/port.html
+++ b/port.html
@@ -121,6 +121,7 @@
 
 						& > span {
 							font-size: 30px;
+							line-height: 40px;
 						}
 					}
 				}
@@ -147,6 +148,37 @@
 
 						&:hover > p {
 							bottom: 0px;
+						}
+
+						& > span {
+							grid-row: 1/2;
+							width: 100%;
+							padding: 0px;
+							margin: 0px;
+							display: grid;
+
+							& > span {
+								transition: top 0.3s ease !important;
+								width: 100%;
+								height: 100%;
+								margin: 0px;
+								padding: 0px;
+								text-align: center;
+								word-wrap: break-all;
+								backdrop-filter: brightness(0.5);
+								position: relative;
+								top: -100%;
+								color: rgba(255,255,255,0.7);
+								overflow: hidden;
+								
+								display: grid;
+								place-items: center;	
+								height: auto;									
+							}			
+
+							&:hover > span {
+								top: 0%;
+							}		
 						}
 
 						& > p {
@@ -278,35 +310,42 @@
 					</div>-->
 					<div id="levels">
 						<div class="level">
+							<span>licence</span>
+							<div class="icons">
+								<div style="background-image: url('img/math.jpg')"><p>数学検定準一級</p></div>
+							</div>
+						</div>
+
+						<div class="level">
 							<span>main</span>
 							<div class="icons">
-								<div style="background-image: url('img/html-1.svg');"><p>HTML5</p></div>
-								<div style="background-image: url('img/css.svg');"><p>CSS3</p></div>
-								<div style="background-image: url('img/js.svg');"><p>JavaScript</p></div>
-								<a href="https://nodejs.org/en" style="background-image: url('img/node.svg');"><p>node.js</p></a>
+								<div style="background-image: url('img/html-1.svg');"><span><span>DOM構築したいときはいつもこれ。jsとかcssも一緒に埋め込んじゃう。</span></span><p>HTML5</p></div>
+								<div style="background-image: url('img/css.svg');"><span><span>DOMの装飾もだいたいこれ。つい最近疑似クラスの素晴らしさに気付いた。アットルールは勉強中。このページにjsはないので、動作とかも総てcss。</span></span><p>CSS3</p></div>
+								<div style="background-image: url('img/js.svg');"><span><span>主言語はこれ。こにかく楽で、DOM操作は見た目に分かり易く初学者にもおすすめ。</span></span><p>JavaScript</p></div>
+								<a href="https://nodejs.org/en" style="background-image: url('img/node.svg');"><span><span>バックエンドの処理をjsで書ける実行環境。言語ではない。スクレイピングが最近の趣味。サーバも簡単に建てられる。</span></span><p>node.js</p></a>
 							</div>
 						</div>	
 
 						<div class="level">
 							<span>sub</span>
 							<div class="icons">
-								<a href="https://www.mysql.com/" style="background-image: url('img/mysql.svg');"><p>MySQL</p></a>
-								<a href="https://www.python.org/" style="background-image: url('img/python.svg');"><p>python</p></a>
+								<a href="https://www.mysql.com/" style="background-image: url('img/mysql.svg');"><span><span>大量のデータを管理するときに使って、、、いたけど最近はjsonで管理することが増えたからあまり使わない。あとxamppが今はない。</span></span><p>MySQL</p></a>
+								<a href="https://www.python.org/" style="background-image: url('img/python.svg');"><span><span>嫌い。でも深層学習用のパッケージがnodeに入らなかったから仕方なく使う。</span></span><p>python</p></a>
 							</div>
 						</div>							
 
 						<div class="level">
 							<span>learning</span>
 							<div class="icons">
-								<a href="https://www.oracle.com/java/" style="background-image: url('img/java.svg'); background-size: 65%;"><p>java</p></a>
-								<a href="https://www.haskell.org/" style="background-image: url('img/haskell.svg');"><p>haskell</p></a>					
+								<a href="https://www.oracle.com/java/" style="background-image: url('img/java.svg'); background-size: 65%;"><span><span>やってる人が多いからやってみようかなと思った。大変面倒くさい。なぜmainを書くだけであんなに行を浪費するのか。</span></span><p>java</p></a>
+								<a href="https://www.haskell.org/" style="background-image: url('img/haskell.svg');"><span><span>どうやら私はoopよりfpの方が性に合うようで、始めた。javaより難しい。資料少なすぎ。関数の定義方法と配列が面白いと思う。</span></span><p>haskell</p></a>					
 							</div>
 						</div>	
 
 						<div class="level">
 							<span>waste</span>
 							<div class="icons">
-								<a href="https://www.php.net/" style="background-image: url('img/php.svg');"><p>php</p></a>
+								<a href="https://www.php.net/" style="background-image: url('img/php.svg');"><span><span>nodeの登場によって、完全に使う機会を失った。この間パソコンのデータが飛んでphpの過去データが総て無くなったので多分二度とやらない。</span></span><p>php</p></a>
 							</div>
 						</div>					
 					</div>
@@ -334,6 +373,15 @@
 						</span>
 
 						<span>
+							<a class="thumb" href="https://pinattutaro.github.io/forSchool/works/chohan/cubeTest_detail.html" style="background-image: url('img/chohan.png'); background-size: 200%;"></a>
+							<div class="description">
+								<div class="subTitle">丁半~digital remastered~</div>
+								　一年生の時の高専祭でパパっと作った丁半。不正もできるよ。
+								<div class="tags">#html5 #css3 #javascript</div>
+							</div>
+						</span>
+
+						<span>
 							<a href="https://pinattutaro.github.io/forSchool/works/tetris.html" style="background-image: url('img/tetris.png');" class="thumb"></a>
 							<div class="description">
 								<div class="subTitle">Tetris</div>
@@ -343,7 +391,7 @@
 						</span>
 
 						<span>
-							<div class="thumb" style="background-image: url(img/extension.svg);"></div>
+							<a class="thumb" href="https://github.com/pinattutaro/forSchool/tree/main/works/observe" style="background-image: url(img/extension.svg);"></a>
 							<div class="description">
 								<div class="subTitle" style="font-size: 25px;">ブラウザ使用状況管理ツール</div>
 								　保護者が被保護者のブラウザの閲覧履歴などを監視するための拡張機能。管理画面からスクリプトを実行させることも可能。悪用厳禁！！
@@ -352,7 +400,7 @@
 						</span>
 
 						<span>
-							<div class="thumb" style="background-image: url('img/extension.svg');"></div>
+							<a class="thumb" href="https://github.com/pinattutaro/forSchool/tree/main/works/extendsForPixivBookmarks" style="background-image: url('img/extension.svg');"></a>
 							<div class="description">
 								<div class="subTitle">Extension for Searching Pixiv Bookmarks</div>
 								　<a href="https://www.pixiv.net">pixiv</a>のブックマークの検索機能ってめっちゃ不便ですよね。タグを検索できるのはいいんですが、自分でタグを設定しなければいけなかったり、複数のタグや詳細な絞り込みできなかったりと惜しい所がありますね。それを自分で補完するための拡張機能だよ。大枠はできたけどスタイル考えるのが面倒くさい。
