--- a/port.html
+++ b/port.html
@@ -364,7 +364,7 @@
 						</span>
 
 						<span>
-							<a class="thumb" href="https://pinattutaro.github.io/Must/top/top.html" style="background-image: url('img/must.png')"></a>
+							<a class="thumb" href="https://pinattutaro.github.io/Must/top/top.html" style="background-image: url('img/must.png'); background-size: 200%;"></a>
 							<div class="description">
 								<div class="subTitle">Must</div>
 								　高専祭乃至総合課題実習の作品として作成した英語学習ウェブアプリ。単語帳の方はバグってるけどウチは担当ちゃうで。でも担当のマーカーの方も日本語対応してない。creating on(予定なし)
